[tool.poetry]
name = "pysem"
version = "0.1.0"
description = "Python implementation to fit Structural Equation Models"
authors = ["Torsten Wörtwein <twoertwein@gmail.com>"]
license = "BSD-3-Claus"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"
torch = "^1.8.0"
typeguard = "^2.11.1"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.2"
black = "^20.8b1"
isort = "^5.8.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py38"]

