[tool.poetry]
name = "pysem"
version = "0.1.0"
description = "Python implementation to fit Structural Equation Models"
authors = ["Torsten Wörtwein <twoertwein@gmail.com>"]
license = "BSD-3-Claus"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=1.2.3"
numpy = ">=1.20.1"
torch = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
